feat: Implement binary image converter UI with canvas, filter controls, and an interactive draggable workspace.

--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Experience | Welcome</title>
+    <title>Binary Image Converter | Digital Art Tool</title>
     <meta name="description"
-        content="A premium, modern web experience with stunning aesthetics and smooth interactions.">
+        content="Convert your photos into binary style images and digital filters with our premium canvas-based tool.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #6366f1;
-            --primary-glow: rgba(99, 102, 241, 0.5);
-            --bg: #030712;
-            --glass: rgba(255, 255, 255, 0.03);
-            --glass-border: rgba(255, 255, 255, 0.1);
-            --text: #f9fafb;
-            --text-muted: #9ca3af;
-            --nav-bg: rgba(3, 7, 18, 0.7);
+            --primary: #22c55e;
+            /* Cyber Green */
+            --primary-glow: rgba(34, 197, 94, 0.4);
+            --bg: #020617;
+            /* Deep Slate */
+            --glass: rgba(255, 255, 255, 0.02);
+            --glass-border: rgba(255, 255, 255, 0.05);
+            --text: #f0fdf4;
+            --text-muted: #4ade80;
+            --nav-bg: rgba(2, 6, 23, 0.8);
         }
 
         * {
@@ -33,11 +35,10 @@
             background-color: var(--bg);
             color: var(--text);
             min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
             position: relative;
+            padding-top: 80px;
         }
 
         /* Animated Background Gradients */
@@ -234,6 +235,180 @@
                 padding: 1.2rem 5%;
             }
         }
+
+        .preview-container {
+            margin-top: 2rem;
+            width: 100%;
+            max-width: 500px;
+            aspect-ratio: 16/9;
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--glass-border);
+            border-radius: 1rem;
+            overflow: hidden;
+            display: none;
+            position: relative;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            image-rendering: pixelated;
+        }
+
+        .controls-panel {
+            margin-top: 2rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            width: 100%;
+            max-width: 500px;
+            padding: 1.5rem;
+            background: var(--glass);
+            border: 1px solid var(--glass-border);
+            border-radius: 1rem;
+            display: none;
+        }
+
+        .control-group {
+            display: flex;
+            flex-direction: column;
+            gap: 0.8rem;
+            text-align: left;
+        }
+
+        .control-label {
+            font-size: 0.8rem;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            color: var(--text-muted);
+            font-weight: 600;
+        }
+
+        .filter-buttons {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        .filter-btn {
+            flex: 1;
+            padding: 0.6rem;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid var(--glass-border);
+            color: var(--text);
+            border-radius: 0.5rem;
+            cursor: pointer;
+            font-size: 0.85rem;
+            transition: all 0.3s ease;
+        }
+
+        .filter-btn.active {
+            background: var(--primary);
+            border-color: var(--primary);
+            color: var(--bg);
+            font-weight: 600;
+        }
+
+        input[type="range"] {
+            width: 100%;
+            accent-color: var(--primary);
+            cursor: pointer;
+        }
+
+        /* Workspace Styles */
+        .workspace-section {
+            padding: 100px 10%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .workspace-title {
+            margin-bottom: 3rem;
+            text-align: center;
+        }
+
+        .workspace-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            width: 100%;
+            max-width: 1200px;
+        }
+
+        .items-pool {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1.5rem;
+            padding: 2rem;
+            background: var(--glass);
+            border: 1px solid var(--glass-border);
+            border-radius: 2rem;
+            min-height: 300px;
+            align-content: flex-start;
+        }
+
+        .drop-zone {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1.5rem;
+            padding: 2rem;
+            background: rgba(255, 255, 255, 0.02);
+            border: 2px dashed var(--glass-border);
+            border-radius: 2rem;
+            min-height: 300px;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .drop-zone.drag-over {
+            background: rgba(99, 102, 241, 0.1);
+            border-color: var(--primary);
+            transform: scale(1.02);
+        }
+
+        .draggable-element {
+            padding: 1rem 1.5rem;
+            background: var(--glass);
+            backdrop-filter: blur(8px);
+            -webkit-backdrop-filter: blur(8px);
+            border: 1px solid var(--glass-border);
+            border-radius: 1rem;
+            cursor: grab;
+            user-select: none;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            font-weight: 500;
+            font-size: 0.9rem;
+        }
+
+        .draggable-element:hover {
+            border-color: var(--primary);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(99, 102, 241, 0.2);
+        }
+
+        .draggable-element:active {
+            cursor: grabbing;
+        }
+
+        .draggable-element.dragging {
+            opacity: 0.5;
+            transform: scale(0.9);
+        }
+
+        .hero-section {
+            height: calc(100vh - 80px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 
@@ -241,21 +416,78 @@
     <div class="mouse-glow" id="mouse-glow"></div>
 
     <header>
-        <a href="#" class="logo">ELEMENTS.</a>
+        <a href="#" class="logo" style="font-family: monospace;">BINARY[V.1]</a>
         <nav>
             <a href="#about">About</a>
-            <a href="#work">Work</a>
+            <a href="#work">Processor</a>
             <a href="#services">Services</a>
             <button class="nav-cta">Get Started</button>
         </nav>
     </header>
 
-    <main class="container">
-        <h1>Elegance Refined.</h1>
-        <p>Experience the perfect blend of minimalist design and high-performance aesthetics. Built for those who
-            appreciate the finer details.</p>
-        <button class="cta-button" id="explore-btn">Explore Now</button>
-    </main>
+    <div class="bg-gradient"></div>
+
+    <section class="hero-section">
+        <main class="container">
+            <h1 style="font-family: monospace; letter-spacing: 0.1em;">BINARY.SRC</h1>
+            <p>Convert your photos into high-contrast digital art. 0s and 1s, matrix-style grids, and binary filters.
+            </p>
+            <button class="cta-button" id="upload-trigger">
+                <span style="margin-right: 8px;">◈</span> Upload Image
+            </button>
+            <input type="file" id="image-input" accept="image/*" style="display: none;">
+
+            <div class="preview-container" id="preview-wrapper">
+                <canvas id="main-canvas"></canvas>
+            </div>
+
+            <div class="controls-panel" id="controls">
+                <div class="control-group">
+                    <span class="control-label">Filter Type</span>
+                    <div class="filter-buttons">
+                        <button class="filter-btn active" data-filter="binary">Binary</button>
+                        <button class="filter-btn" data-filter="matrix">Matrix</button>
+                        <button class="filter-btn" data-filter="pixel">Pixel</button>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div style="display: flex; justify-content: space-between;">
+                        <span class="control-label">Intensity / Threshold</span>
+                        <span id="threshold-val" style="font-size: 0.8rem; font-family: monospace;">128</span>
+                    </div>
+                    <input type="range" id="threshold-slider" min="0" max="255" value="128">
+                </div>
+            </div>
+        </main>
+    </section>
+
+    <section class="workspace-section" id="work">
+        <div class="workspace-title">
+            <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Interactive Lab</h2>
+            <p style="margin-bottom: 0;">Drag the elements into the drop zone below</p>
+        </div>
+
+        <div class="workspace-grid">
+            <div class="items-pool" id="pool">
+                <div class="draggable-element" draggable="true" id="el-1">
+                    <span style="color: #6366f1">●</span> Core Logic
+                </div>
+                <div class="draggable-element" draggable="true" id="el-2">
+                    <span style="color: #10b981">●</span> Visual Shell
+                </div>
+                <div class="draggable-element" draggable="true" id="el-3">
+                    <span style="color: #f59e0b">●</span> Data Engine
+                </div>
+                <div class="draggable-element" draggable="true" id="el-4">
+                    <span style="color: #ec4899">●</span> UI Layer
+                </div>
+            </div>
+
+            <div class="drop-zone" id="drop-zone">
+                <p style="pointer-events: none; opacity: 0.5;">Drop Elements Here</p>
+            </div>
+        </div>
+    </section>
 
     <script>
         // Mouse follow effect
@@ -274,6 +506,150 @@
             const p = document.querySelector('p');
             p.textContent = "Thank you for stopping by. This is just the beginning of something beautiful.";
             p.style.color = "#fff";
+        });
+
+        // Image Processing Logic
+        const uploadTrigger = document.getElementById('upload-trigger');
+        const imageInput = document.getElementById('image-input');
+        const canvas = document.getElementById('main-canvas');
+        const ctx = canvas.getContext('2d');
+        const previewWrapper = document.getElementById('preview-wrapper');
+        const controls = document.getElementById('controls');
+        const thresholdSlider = document.getElementById('threshold-slider');
+        const thresholdValTxt = document.getElementById('threshold-val');
+        const filterBtns = document.querySelectorAll('.filter-btn');
+
+        let originalImage = null;
+        let currentFilter = 'binary';
+
+        uploadTrigger.addEventListener('click', () => imageInput.click());
+
+        imageInput.addEventListener('change', (e) => {
+            const file = e.target.files[0];
+            if (!file) return;
+
+            const reader = new FileReader();
+            reader.onload = (event) => {
+                const img = new Image();
+                img.onload = () => {
+                    originalImage = img;
+                    previewWrapper.style.display = 'block';
+                    controls.style.display = 'flex';
+                    processImage();
+                };
+                img.src = event.target.result;
+            };
+            reader.readAsDataURL(file);
+        });
+
+        thresholdSlider.addEventListener('input', (e) => {
+            thresholdValTxt.textContent = e.target.value;
+            processImage();
+        });
+
+        filterBtns.forEach(btn => {
+            btn.addEventListener('click', () => {
+                filterBtns.forEach(b => b.classList.remove('active'));
+                btn.classList.add('active');
+                currentFilter = btn.dataset.filter;
+                processImage();
+            });
+        });
+
+        function processImage() {
+            if (!originalImage) return;
+
+            canvas.width = originalImage.width;
+            canvas.height = originalImage.height;
+            ctx.drawImage(originalImage, 0, 0);
+
+            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
+            const threshold = parseInt(thresholdSlider.value);
+
+            if (currentFilter === 'binary') {
+                for (let i = 0; i < data.length; i += 4) {
+                    const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                    const val = avg >= threshold ? 255 : 0;
+                    data[i] = data[i + 1] = data[i + 2] = val;
+                }
+            } else if (currentFilter === 'matrix') {
+                // Simplified Matrix Effect: High contrast green grayscale
+                for (let i = 0; i < data.length; i += 4) {
+                    const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                    const val = avg >= threshold ? avg : 0;
+                    data[i] = 0;
+                    data[i + 1] = val;
+                    data[i + 2] = 0;
+                }
+            } else if (currentFilter === 'pixel') {
+                // Pixelate is handled differently, usually by scaling down and up
+                // But for simplicity in this loop we'll do a basic "posterize" feel
+                const blockSize = Math.max(1, Math.floor((255 - threshold) / 10));
+                for (let i = 0; i < data.length; i += 4) {
+                    data[i] = Math.floor(data[i] / (threshold / 2 + 1)) * (threshold / 2 + 1);
+                    data[i + 1] = Math.floor(data[i + 1] / (threshold / 2 + 1)) * (threshold / 2 + 1);
+                    data[i + 2] = Math.floor(data[i + 2] / (threshold / 2 + 1)) * (threshold / 2 + 1);
+                }
+            }
+
+            ctx.putImageData(imageData, 0, 0);
+        }
+
+        // Drag and Drop Logic
+        const draggables = document.querySelectorAll('.draggable-element');
+        const dropZone = document.getElementById('drop-zone');
+        const pool = document.getElementById('pool');
+
+        draggables.forEach(draggable => {
+            draggable.addEventListener('dragstart', () => {
+                draggable.classList.add('dragging');
+            });
+
+            draggable.addEventListener('dragend', () => {
+                draggable.classList.remove('dragging');
+            });
+        });
+
+        dropZone.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            dropZone.classList.add('drag-over');
+        });
+
+        dropZone.addEventListener('dragleave', () => {
+            dropZone.classList.remove('drag-over');
+        });
+
+        dropZone.addEventListener('drop', (e) => {
+            e.preventDefault();
+            dropZone.classList.remove('drag-over');
+            const dragging = document.querySelector('.dragging');
+            if (dragging) {
+                dropZone.appendChild(dragging);
+
+                // Hide helper text if elements are dropped
+                if (dropZone.querySelector('p')) {
+                    dropZone.querySelector('p').style.display = 'none';
+                }
+            }
+        });
+
+        // Allow moving back to pool
+        pool.addEventListener('dragover', (e) => {
+            e.preventDefault();
+        });
+
+        pool.addEventListener('drop', (e) => {
+            e.preventDefault();
+            const dragging = document.querySelector('.dragging');
+            if (dragging) {
+                pool.appendChild(dragging);
+
+                // Show helper text if zone is empty
+                if (dropZone.children.length === 1 && dropZone.querySelector('p')) {
+                    dropZone.querySelector('p').style.display = 'block';
+                }
+            }
         });
     </script>
 </body>
