feat: Add a scanline effect, implement a download button for the canvas, and update the workspace title and description.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,21 @@
             }
         }
 
+        /* Scanline Effect */
+        body::before {
+            content: " ";
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
+            z-index: 999;
+            background-size: 100% 3px, 3px 100%;
+            pointer-events: none;
+        }
+
         .preview-container {
             margin-top: 2rem;
             width: 100%;
@@ -457,14 +472,17 @@
                     </div>
                     <input type="range" id="threshold-slider" min="0" max="255" value="128">
                 </div>
+                <button class="cta-button" id="download-btn" style="width: 100%; padding: 0.8rem; font-size: 0.9rem;">
+                    💾 Download Result
+                </button>
             </div>
         </main>
     </section>
 
     <section class="workspace-section" id="work">
         <div class="workspace-title">
-            <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Interactive Lab</h2>
-            <p style="margin-bottom: 0;">Drag the elements into the drop zone below</p>
+            <h2 style="font-size: 2.5rem; margin-bottom: 1rem; font-family: monospace;">LAB.PROTOCOL</h2>
+            <p style="margin-bottom: 0; opacity: 0.7;">Interactive Component Sandbox</p>
         </div>
 
         <div class="workspace-grid">
@@ -518,11 +536,19 @@
         const thresholdSlider = document.getElementById('threshold-slider');
         const thresholdValTxt = document.getElementById('threshold-val');
         const filterBtns = document.querySelectorAll('.filter-btn');
+        const downloadBtn = document.getElementById('download-btn');
 
         let originalImage = null;
         let currentFilter = 'binary';
 
         uploadTrigger.addEventListener('click', () => imageInput.click());
+
+        downloadBtn.addEventListener('click', () => {
+            const link = document.createElement('a');
+            link.download = 'binary-art.png';
+            link.href = canvas.toDataURL();
+            link.click();
+        });
 
         imageInput.addEventListener('change', (e) => {
             const file = e.target.files[0];
