--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             font-size: 3.5rem;
             font-weight: 800;
             margin-bottom: 1rem;
-            background: linear-gradient(to bottom right, #fff, #9ca3af);
+            background: linear-gradient(to bottom right, var(--text), var(--text-muted));
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -179,7 +179,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 800;
-            background: linear-gradient(to right, #fff, var(--primary));
+            background: linear-gradient(to right, var(--text), var(--primary));
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -565,16 +565,6 @@
             glow.style.setProperty('--y', e.clientY + 'px');
         });
 
-        // Simple button interaction
-        const btn = document.getElementById('explore-btn');
-        btn.addEventListener('click', () => {
-            btn.textContent = "Welcome Aboard";
-            btn.style.background = "#10b981"; // Change to Emerald
-
-            const p = document.querySelector('p');
-            p.textContent = "Thank you for stopping by. This is just the beginning of something beautiful.";
-            p.style.color = "#fff";
-        });
 
         // Image Processing Logic
         const uploadTrigger = document.getElementById('upload-trigger');
