--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
+            --bg: #f8fafc;
+            --text: #0f172a;
+            --text-muted: #475569;
+            --glass: rgba(15, 23, 42, 0.03);
+            --glass-border: rgba(15, 23, 42, 0.1);
+            --nav-bg: rgba(248, 250, 252, 0.8);
+            --primary: #10b981;
+            --primary-glow: rgba(16, 185, 129, 0.2);
+            --transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        body.dark-mode {
             --primary: #22c55e;
             /* Cyber Green */
             --primary-glow: rgba(34, 197, 94, 0.4);
@@ -22,18 +34,6 @@
             --text: #f0fdf4;
             --text-muted: #4ade80;
             --nav-bg: rgba(2, 6, 23, 0.8);
-            --transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        body.light-mode {
-            --bg: #f8fafc;
-            --text: #0f172a;
-            --text-muted: #475569;
-            --glass: rgba(15, 23, 42, 0.03);
-            --glass-border: rgba(15, 23, 42, 0.1);
-            --nav-bg: rgba(248, 250, 252, 0.8);
-            --primary: #10b981;
-            --primary-glow: rgba(16, 185, 129, 0.2);
         }
 
         * {
@@ -257,19 +257,19 @@
         }
 
         .theme-toggle .sun {
-            display: none;
+            display: block;
         }
 
         .theme-toggle .moon {
-            display: block;
-        }
-
-        body.light-mode .theme-toggle .sun {
-            display: block;
-        }
-
-        body.light-mode .theme-toggle .moon {
             display: none;
+        }
+
+        body.dark-mode .theme-toggle .sun {
+            display: none;
+        }
+
+        body.dark-mode .theme-toggle .moon {
+            display: block;
         }
 
         @media (max-width: 768px) {
@@ -580,14 +580,14 @@
         const themeBtn = document.getElementById('theme-btn');
 
         // Theme Persistence
-        if (localStorage.getItem('theme') === 'light') {
-            document.body.classList.add('light-mode');
+        if (localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-mode');
         }
 
         themeBtn.addEventListener('click', () => {
-            document.body.classList.toggle('light-mode');
-            const isLight = document.body.classList.contains('light-mode');
-            localStorage.setItem('theme', isLight ? 'light' : 'dark');
+            document.body.classList.toggle('dark-mode');
+            const isDark = document.body.classList.contains('dark-mode');
+            localStorage.setItem('theme', isDark ? 'dark' : 'light');
         });
 
         let originalImage = null;
