style: remove version number from logo text in header.

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     <div class="mouse-glow" id="mouse-glow"></div>
 
     <header>
-        <a href="#" class="logo" style="font-family: monospace;">BINARY[V.1]</a>
+        <a href="#" class="logo" style="font-family: monospace;">BINARY</a>
         <nav>
             <a href="#about">About</a>
             <a href="#work">Processor</a>
