--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             z-index: 10;
             text-align: center;
             padding: 3rem;
-            max-width: 600px;
+            width: 90%;
+            max-width: 1400px;
             background: var(--glass);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
@@ -87,6 +88,9 @@
             border-radius: 2rem;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
             animation: fadeIn 1s ease-out;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         @keyframes fadeIn {
@@ -300,8 +304,8 @@
         .preview-container {
             margin-top: 2rem;
             width: 100%;
-            max-width: 500px;
-            aspect-ratio: 16/9;
+            height: auto;
+            max-height: 70vh;
             background: rgba(0, 0, 0, 0.3);
             border: 1px solid var(--glass-border);
             border-radius: 1rem;
@@ -320,11 +324,13 @@
         .controls-panel {
             margin-top: 2rem;
             display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-end;
+            gap: 2rem;
             width: 100%;
-            max-width: 500px;
-            padding: 1.5rem;
+            padding: 2rem;
             background: var(--glass);
             border: 1px solid var(--glass-border);
             border-radius: 1rem;
@@ -465,10 +471,48 @@
         }
 
         .hero-section {
-            height: calc(100vh - 80px);
+            min-height: calc(100vh - 80px);
+            padding: 4rem 2rem;
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+
+        footer {
+            padding: 3rem 10%;
+            background: var(--nav-bg);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border-top: 1px solid var(--glass-border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 100;
+            position: relative;
+            margin-top: 4rem;
+        }
+
+        .footer-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .footer-links a {
+            color: var(--text-muted);
+            text-decoration: none;
+            font-size: 0.9rem;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--text);
+        }
+
+        .copyright {
+            font-size: 0.8rem;
+            color: var(--text-muted);
+            opacity: 0.6;
+            font-family: monospace;
         }
     </style>
 </head>
@@ -479,7 +523,6 @@
     <header>
         <a href="#" class="logo" style="font-family: monospace;">BINARY</a>
         <nav>
-            <a href="#about">About</a>
             <a href="#work">Processor</a>
             <a href="#services">Services</a>
             <button class="theme-toggle" id="theme-btn" aria-label="Toggle Theme">
@@ -730,6 +773,13 @@
             }
         });
     </script>
+    <footer>
+        <div class="logo" style="font-family: monospace; font-size: 1.2rem;">BINARY</div>
+        <div class="footer-links">
+            <a href="#about">About</a>
+        </div>
+        </div>
+    </footer>
 </body>
 
 </html>
