feat: Add a new "Services" section with detailed capabilities and corresponding styling.

--- a/index.html
+++ b/index.html
@@ -382,6 +382,57 @@
             cursor: pointer;
         }
 
+        /* Services Section */
+        .services-section {
+            padding: 100px 10%;
+            background: rgba(255, 255, 255, 0.01);
+            position: relative;
+        }
+
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .service-card {
+            padding: 2.5rem;
+            background: var(--glass);
+            border: 1px solid var(--glass-border);
+            border-radius: 1.5rem;
+            text-align: left;
+            transition: all 0.3s ease;
+        }
+
+        .service-card:hover {
+            border-color: var(--primary);
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .service-icon {
+            font-size: 2rem;
+            color: var(--primary);
+            margin-bottom: 1.5rem;
+            display: block;
+        }
+
+        .service-card h3 {
+            font-size: 1.25rem;
+            margin-bottom: 1rem;
+            font-family: monospace;
+            color: var(--text);
+        }
+
+        .service-card p {
+            font-size: 0.95rem;
+            color: var(--text-muted);
+            margin-bottom: 0;
+            line-height: 1.5;
+        }
+
         /* Workspace Styles */
         .workspace-section {
             padding: 100px 10%;
@@ -570,6 +621,39 @@
                 </button>
             </div>
         </main>
+    </section>
+
+    <section class="services-section" id="services">
+        <div class="workspace-title">
+            <h2 style="font-size: 2.5rem; margin-bottom: 1rem; font-family: monospace;">CAPABILITIES</h2>
+            <p style="margin-bottom: 3rem; opacity: 0.7;">High-Precision Digital Processing</p>
+        </div>
+        <div class="services-grid">
+            <div class="service-card">
+                <span class="service-icon">◈</span>
+                <h3>Binary Conversion</h3>
+                <p>Pure mathematical abstraction. Transforms images into definitive black and white matrices using
+                    custom threshold logic.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">▤</span>
+                <h3>Matrix Grid</h3>
+                <p>Inspired by terminal displays. Maps brightness values to high-contrast emerald scales for a nostalgic
+                    digital aesthetic.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">▩</span>
+                <h3>Pixel Abstraction</h3>
+                <p>Deconstructs visual data into fundamental blocks. Perfect for creating digital patterns and
+                    low-frequency abstractions.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">💾</span>
+                <h3>Artisan Export</h3>
+                <p>Seamlessly save your generated art as high-quality PNG files, ready for digital deployment or
+                    physical print.</p>
+            </div>
+        </div>
     </section>
 
     <section class="workspace-section" id="work">
@@ -777,7 +861,6 @@
         <div class="logo" style="font-family: monospace; font-size: 1.2rem;">BINARY</div>
         <div class="footer-links">
             <a href="#about">About</a>
-        </div>
         </div>
     </footer>
 </body>
