feat: Update navigation links to point to the hero section and rename "Services" to "Capabilities".

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
     <header>
         <a href="#" class="logo" style="font-family: monospace;">BINARY</a>
         <nav>
-            <a href="#work">Processor</a>
-            <a href="#services">Services</a>
+            <a href="#hero">Processor</a>
+            <a href="#services">Capabilities</a>
             <button class="theme-toggle" id="theme-btn" aria-label="Toggle Theme">
                 <span class="moon">🌙</span>
                 <span class="sun">☀️</span>
@@ -499,7 +499,7 @@
 
     <div class="bg-gradient"></div>
 
-    <section class="hero-section">
+    <section class="hero-section" id="hero">
         <main class="container">
             <h1 style="font-family: monospace; letter-spacing: 0.1em;">BINARY.SRC</h1>
             <p>Convert your photos into high-contrast digital art. 0s and 1s, matrix-style grids, and binary filters.
