--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         :root {
             --bg: #f8fafc;
             --text: #0f172a;
@@ -51,6 +55,17 @@
             overflow-y: auto;
             position: relative;
             padding-top: 80px;
+        }
+
+        #matrix-rain-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            opacity: 0.15;
+            pointer-events: none;
         }
 
         /* Animated Background Gradients */
@@ -449,6 +464,7 @@
             -webkit-backdrop-filter: blur(12px);
             border-top: 1px solid var(--glass-border);
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             z-index: 100;
@@ -482,6 +498,7 @@
 </head>
 
 <body>
+    <canvas id="matrix-rain-canvas"></canvas>
     <div class="mouse-glow" id="mouse-glow"></div>
 
     <header>
@@ -493,7 +510,7 @@
                 <span class="moon">🌙</span>
                 <span class="sun">☀️</span>
             </button>
-            <button class="nav-cta">Get Started</button>
+            <a href="#hero" class="nav-cta" style="text-decoration: none;">Get Started</a>
         </nav>
     </header>
 
@@ -507,7 +524,12 @@
             <button class="cta-button" id="upload-trigger">
                 <span style="margin-right: 8px;">◈</span> Upload Image
             </button>
+            <button class="cta-button" id="camera-trigger"
+                style="margin-left: 1rem; background: var(--glass); border: 1px solid var(--glass-border);">
+                <span style="margin-right: 8px;">📷</span> Live Camera
+            </button>
             <input type="file" id="image-input" accept="image/*" style="display: none;">
+            <video id="camera-feed" style="display: none;" autoplay playsinline></video>
 
             <div class="preview-container" id="preview-wrapper">
                 <canvas id="main-canvas"></canvas>
@@ -520,6 +542,18 @@
                         <button class="filter-btn active" data-filter="binary">Binary</button>
                         <button class="filter-btn" data-filter="matrix">Matrix</button>
                         <button class="filter-btn" data-filter="pixel">Pixel</button>
+                        <button class="filter-btn" data-filter="data">Data</button>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <span class="control-label">Data Color</span>
+                    <div class="filter-buttons color-selectors" style="display: flex; gap: 0.8rem; margin-top: 0.5rem;">
+                        <button class="color-btn active" data-color="#10b981" title="Emerald"
+                            style="background: #10b981; width: 28px; height: 28px; border-radius: 4px; border: 2px solid white; cursor: pointer;"></button>
+                        <button class="color-btn" data-color="#f59e0b" title="Amber"
+                            style="background: #f59e0b; width: 28px; height: 28px; border-radius: 4px; border: 2px solid transparent; cursor: pointer;"></button>
+                        <button class="color-btn" data-color="#06b6d4" title="Cyan"
+                            style="background: #06b6d4; width: 28px; height: 28px; border-radius: 4px; border: 2px solid transparent; cursor: pointer;"></button>
                     </div>
                 </div>
                 <div class="control-group">
@@ -529,8 +563,13 @@
                     </div>
                     <input type="range" id="threshold-slider" min="0" max="255" value="128">
                 </div>
-                <button class="cta-button" id="download-btn" style="width: 100%; padding: 0.8rem; font-size: 0.9rem;">
+                <button class="cta-button" id="download-btn"
+                    style="width: 100%; padding: 0.8rem; font-size: 0.9rem; margin-bottom: 0.5rem;">
                     💾 Download Result
+                </button>
+                <button class="cta-button" id="copy-btn"
+                    style="width: 100%; padding: 0.8rem; font-size: 0.9rem; background: var(--glass); border: 1px solid var(--glass-border);">
+                    📋 Copy Data (0-1)
                 </button>
             </div>
         </main>
@@ -571,6 +610,31 @@
 
 
     <script>
+        let activePrimary = '#10b981';
+        const rainCanvas = document.getElementById('matrix-rain-canvas');
+        const rCtx = rainCanvas.getContext('2d');
+        let columns = [];
+        const initRain = () => {
+            rainCanvas.width = window.innerWidth;
+            rainCanvas.height = window.innerHeight;
+            columns = Array(Math.floor(rainCanvas.width / 20)).fill(0);
+        };
+        window.addEventListener('resize', initRain);
+        initRain();
+        const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789$#@&%!*";
+        function drawRain() {
+            rCtx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+            rCtx.fillRect(0, 0, rainCanvas.width, rainCanvas.height);
+            rCtx.fillStyle = getComputedStyle(document.body).getPropertyValue('--primary').trim();
+            rCtx.font = "15px monospace";
+            columns.forEach((y, i) => {
+                const char = chars[Math.floor(Math.random() * chars.length)];
+                rCtx.fillText(char, i * 20, y);
+                columns[i] = y > rainCanvas.height || Math.random() > 0.95 ? 0 : y + 20;
+            });
+            requestAnimationFrame(drawRain);
+        }
+        drawRain();
         // Mouse follow effect
         const glow = document.getElementById('mouse-glow');
         document.addEventListener('mousemove', (e) => {
@@ -591,6 +655,10 @@
         const filterBtns = document.querySelectorAll('.filter-btn');
         const downloadBtn = document.getElementById('download-btn');
         const themeBtn = document.getElementById('theme-btn');
+        const cameraTrigger = document.getElementById('camera-trigger');
+        const cameraFeed = document.getElementById('camera-feed');
+        const copyBtn = document.getElementById('copy-btn');
+        const colorBtns = document.querySelectorAll('.color-btn');
 
         // Theme Persistence
         if (localStorage.getItem('theme') === 'dark') {
@@ -605,8 +673,22 @@
 
         let originalImage = null;
         let currentFilter = 'binary';
+        let isLive = false;
 
         uploadTrigger.addEventListener('click', () => imageInput.click());
+        cameraTrigger.addEventListener('click', () => startCamera());
+        copyBtn.addEventListener('click', () => copyToClipboard());
+
+        colorBtns.forEach(btn => {
+            btn.addEventListener('click', () => {
+                colorBtns.forEach(b => b.style.border = '2px solid transparent');
+                btn.style.border = '2px solid white';
+                activePrimary = btn.dataset.color;
+                document.body.style.setProperty('--primary', activePrimary);
+                document.body.style.setProperty('--primary-glow', activePrimary + '33'); // 20% opacity hex
+                processImage();
+            });
+        });
 
         downloadBtn.addEventListener('click', () => {
             const link = document.createElement('a');
@@ -623,6 +705,7 @@
             reader.onload = (event) => {
                 const img = new Image();
                 img.onload = () => {
+                    stopCamera();
                     originalImage = img;
                     previewWrapper.style.display = 'block';
                     controls.style.display = 'flex';
@@ -648,11 +731,12 @@
         });
 
         function processImage() {
-            if (!originalImage) return;
+            if (!originalImage && !isLive) return;
 
-            canvas.width = originalImage.width;
-            canvas.height = originalImage.height;
-            ctx.drawImage(originalImage, 0, 0);
+            const source = isLive ? cameraFeed : originalImage;
+            canvas.width = source.videoWidth || source.width;
+            canvas.height = source.videoHeight || source.height;
+            ctx.drawImage(source, 0, 0);
 
             const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
@@ -664,14 +748,15 @@
                     const val = avg >= threshold ? 255 : 0;
                     data[i] = data[i + 1] = data[i + 2] = val;
                 }
-            } else if (currentFilter === 'matrix') {
-                // Simplified Matrix Effect: High contrast green grayscale
+                const r = parseInt(activePrimary.slice(1, 3), 16);
+                const g = parseInt(activePrimary.slice(3, 5), 16);
+                const b = parseInt(activePrimary.slice(5, 7), 16);
                 for (let i = 0; i < data.length; i += 4) {
                     const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
-                    const val = avg >= threshold ? avg : 0;
-                    data[i] = 0;
-                    data[i + 1] = val;
-                    data[i + 2] = 0;
+                    const val = avg >= threshold ? avg / 255 : 0;
+                    data[i] = r * val;
+                    data[i + 1] = g * val;
+                    data[i + 2] = b * val;
                 }
             } else if (currentFilter === 'pixel') {
                 // Pixelate is handled differently, usually by scaling down and up
@@ -682,13 +767,87 @@
                     data[i + 1] = Math.floor(data[i + 1] / (threshold / 2 + 1)) * (threshold / 2 + 1);
                     data[i + 2] = Math.floor(data[i + 2] / (threshold / 2 + 1)) * (threshold / 2 + 1);
                 }
+            } else if (currentFilter === 'data') {
+                const fontSize = 10;
+                ctx.font = `bold ${fontSize}px monospace`;
+                ctx.textBaseline = 'top';
+                ctx.fillStyle = getComputedStyle(document.body).getPropertyValue('--bg');
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                ctx.fillStyle = activePrimary;
+                for (let y = 0; y < canvas.height; y += fontSize) {
+                    for (let x = 0; x < canvas.width; x += fontSize) {
+                        const i = (Math.floor(y) * canvas.width + Math.floor(x)) * 4;
+                        const char = (data[i] + data[i + 1] + data[i + 2]) / 3 >= threshold ? '1' : '0';
+                        ctx.fillText(char, x, y);
+                    }
+                }
+                return;
             }
 
             ctx.putImageData(imageData, 0, 0);
         }
 
+
+        async function startCamera() {
+            if (isLive) { stopCamera(); return; }
+            const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+            cameraFeed.srcObject = stream;
+            isLive = true;
+            cameraTrigger.textContent = '❌ Stop Camera';
+            cameraTrigger.classList.add('active');
+            previewWrapper.style.display = 'block';
+            controls.style.display = 'flex';
+            requestAnimationFrame(processCameraFrame);
+        }
+
+        function stopCamera() {
+            isLive = false;
+            cameraTrigger.innerHTML = '<span style="margin-right: 8px;">📷</span> Live Camera';
+            cameraTrigger.classList.remove('active');
+            if (cameraFeed.srcObject) {
+                cameraFeed.srcObject.getTracks().forEach(track => track.stop());
+                cameraFeed.srcObject = null;
+            }
+        }
+
+        function processCameraFrame() {
+            if (!isLive) return;
+            processImage();
+            requestAnimationFrame(processCameraFrame);
+        }
+        function generateTextGrid() {
+            const gridSize = 12;
+            let output = "";
+            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
+            const threshold = parseInt(thresholdSlider.value);
+            for (let y = 0; y < canvas.height; y += gridSize) {
+                for (let x = 0; x < canvas.width; x += gridSize) {
+                    const i = (Math.floor(y) * canvas.width + Math.floor(x)) * 4;
+                    output += (data[i] + data[i + 1] + data[i + 2]) / 3 >= threshold ? '1' : '0';
+                }
+                output += '\n';
+            }
+            return output;
+        }
+        function copyToClipboard() {
+            const text = generateTextGrid();
+            navigator.clipboard.writeText(text).then(() => {
+                const originalText = copyBtn.innerHTML;
+                copyBtn.textContent = '✅ Copied!';
+                setTimeout(() => copyBtn.innerHTML = originalText, 2000);
+            });
+        }
     </script>
     <footer>
+        <div id="about"
+            style="width: 100%; margin-bottom: 2rem; border-bottom: 1px solid var(--glass-border); padding-bottom: 2rem;">
+            <h3 style="font-family: monospace; margin-bottom: 1rem;">PROTOCOL.ABOUT</h3>
+            <p style="font-size: 0.9rem; max-width: 800px; margin-bottom: 0;">BINARY.SRC is a high-precision digital art
+                protocol designed to deconstruct visual data into its fundamental binary components. By sampling
+                luminosity across custom grids, we transform organic imagery into structured mathematical abstractions.
+            </p>
+        </div>
         <div class="logo" style="font-family: monospace; font-size: 1.2rem;">BINARY</div>
         <div class="footer-links">
             <a href="#about">About</a>
