--- a/index.html
+++ b/index.html
@@ -494,6 +494,47 @@
             opacity: 0.6;
             font-family: monospace;
         }
+
+        @media (max-width: 1024px) {
+            .container {
+                width: 95%;
+                padding: 2rem;
+            }
+
+            .hero-section {
+                padding: 2rem 1rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                border-radius: 1rem;
+                padding: 1.5rem;
+            }
+
+            .hero-title {
+                font-size: 2.2rem;
+            }
+
+            nav {
+                gap: 1rem;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            header {
+                flex-direction: column;
+                gap: 0.8rem;
+                padding: 1rem;
+            }
+
+            .controls-panel {
+                flex-direction: column;
+                align-items: stretch;
+                padding: 1.2rem;
+                gap: 1.5rem;
+            }
+        }
     </style>
 </head>
 
